syntax = "proto3";

package tonbo;

message GetReq {
    string table_name = 1;
    bytes key = 2;
}

message GetResp {
     optional bytes record = 1;
}

message ScanReq {
    string table_name = 1;
    bytes min = 2;
    bytes max = 3;
}

message ScanResp {
    bytes record = 1;
}

message InsertReq {
    string table_name = 1;
    bytes record = 2;
}

message RemoveReq {
    string table_name = 1;
    bytes key = 2;
}

message FlushReq {
    string table_name = 1;
}

message CreateTableReq {
    string table_name = 1;
    repeated ColumnDesc desc = 2;
    uint32 primary_key_index = 3;
}

enum Datatype {
    UINT8 = 0;
    UINT16 = 1;
    UINT32 = 2;
    UINT64 = 3;
    INT8 = 4;
    INT16 = 5;
    INT32 = 6;
    INT64 = 7;
    STRING = 8;
    BOOLEAN = 9;
    BYTES = 10;
}

message ColumnDesc {
    string name = 1;
    Datatype ty = 2;
    bool is_nullable = 3;
}

message Empty {}

service TonboRpc {
    rpc CreateTable(CreateTableReq) returns (Empty) {}
    rpc Get (GetReq) returns (GetResp) {}
    rpc Scan (ScanReq) returns (stream ScanResp) {}
    rpc Insert (InsertReq) returns (Empty) {}
    rpc Remove (RemoveReq) returns (Empty) {}
    rpc Flush (FlushReq) returns (Empty) {}
}
